Added Contact Page (Still Editing)

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- Fontawesome Script -->
+    <script src="https://kit.fontawesome.com/c3dd0c8dca.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
