Added mailing service

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
 
     <!-- Fontawesome Script -->
     <script src="https://kit.fontawesome.com/c3dd0c8dca.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
 </body>
 
 </html>
