--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#04010f" />
+  <meta name="description" content="This is Ritban Barua's Portfolio Website." />
+  <meta name="robots" content="INDEX, FOLLOW" />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +30,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Proza+Libre:wght@500;600;700&family=Ubuntu:wght@500;700&display=swap"
     rel="stylesheet">
 
-  <title>React App</title>
+  <title>Ritban Barua's Portfolio</title>
 </head>
 
 <body>
